[tool.poetry]
name = "django-pg-upsert"
version = "0.3.1"
description = ""
authors = ["Semyon Pupkov <mail@semyonpupkov.com>"]

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-django = '3.7.0'
psycopg2-binary = "=2.8.6"
freezegun = "^0.3.12"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
