[tool.poetry]
name = "django-pg-upsert"
version = "0.4.0"
description = "Support Postgres native upsert (INSERT ... ON CONFLICT) for django"
authors = ["Semyon Pupkov <mail@semyonpupkov.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
Django = ">=2.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-django = '3.7.0'
psycopg2-binary = "2.9.5"
freezegun = "^0.3.12"
flake8 = "^3.8.4"
black = "22.1.0"
flake8-black = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
